# VCPG

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  render.yaml  requirements.txt
backend/: config.py  main.py
backend/agents/: groq_agent.py  openrouter_agent.py  orchestrator.py
backend/routes/: prompt_routes.py
backend/schemas/: prompt_schema.py
backend/services/: groq_service.py  openrouter_service.py  prompt_loader.py
backend/utils/: logger.py
frontend/: app.py
frontend/.streamlit/: config.toml
frontend/components/: hero.py  metrics.py  progress.py  prompt_viewer.py  sidebar.py  stepper.py
frontend/pages/: dashboard.py  generator.py  results.py
frontend/styles/: theme.css
frontend/utils/: api_client.py
prompts/: architect_prompt.txt  refinement_prompt.txt
