[project]
name = "vcpg"
version = "1.0.0"
description = "Vibe Coding Prompt Generator"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
"fastapi>=0.116.0",
"uvicorn>=0.35.0",
"streamlit>=1.48.0",
"httpx>=0.28.1",
"python-dotenv>=1.1.1",
"pydantic>=2.11.0",
"pydantic-settings>=2.10.0"
]

[tool.pytest.ini_options]
pythonpath = ["."]
